Fix: Overflow docs navbar

--- a/src/sass/common.sass
+++ b/src/sass/common.sass
@@ -94,6 +94,9 @@ header
         background-color: $colr-theme-dark
 footer
   width: 100%
+  position: relative
+  z-index: 11
+  background-color: #fff
   .footer-b
     border-top: 1px solid $colr-theme-dark
     padding: 24px
