--- a/src/sass/platform.sass
+++ b/src/sass/platform.sass
@@ -44,12 +44,17 @@
   .nav
     width: $platform-nav-width-lg
     height: 100%
-    overflow-y: auto
-    padding: 60px 24px
+    overflow: hidden
+    padding: 0
     position: fixed
-    top: 80px
+    top: 0
     right: 0
     z-index: 9
+    .nav-b
+      height: 100%
+      padding: 140px 24px 90px
+      overflow: auto
+
     .nav-i
       font-size: 20px
       margin-bottom: 8px
