--- a/src/sass/tablet/platform.sass
+++ b/src/sass/tablet/platform.sass
@@ -6,10 +6,11 @@
         width: $platform-content-base-width-sm
     .nav
       display: none
-      padding-top: 40px
-      padding-right: 80px
-      padding-bottom: 80px
-      overflow: auto
+      .nav-b
+        padding-top: 40px
+        padding-right: 80px
+        padding-bottom: 80px
+        overflow: auto
       &.active
         display: block
         position: fixed
